Fix more orient spacing

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -949,12 +949,12 @@ a:hover {
 .orient {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: flex-start;
     padding-bottom: 50px;
     margin-bottom: 15px;
+    margin-left: 25px;
     border-bottom: 1px solid rgb(255, 162, 146);
     width: 80%;
-    margin-left: 25px;
     margin-bottom: 15px;
 }
 
